--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -21,6 +21,7 @@
     android:padding="20dip">
 
     <TextView
+        android:id="@+id/about_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
@@ -28,7 +29,6 @@
         android:textColor="?android:attr/textColorPrimaryInverse" />
 
     <TextView
-        android:id="@+id/about_credits"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="20dip"
