Add preference screen and move hardcoded values there

--- a/res/menu/lookup.xml
+++ b/res/menu/lookup.xml
@@ -31,5 +31,9 @@
         android:title="@string/lookup_help"
         android:icon="@android:drawable/ic_menu_help" />
 
+    <item
+        android:id="@+id/lookup_preferences"
+        android:title="@string/lookup_preferences"
+        android:icon="@android:drawable/ic_menu_preferences" />
 
 </menu>
