--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -25,16 +25,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:text="@string/app_descrip"
-        android:textColor="?android:attr/textColorPrimaryInverse" />
+        android:textColor="#444444"
+        android:text="@string/app_descrip" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="20dip"
         android:textSize="16sp"
+        android:textColor="#444444"
         android:text="@string/app_credits"
-        android:autoLink="web"
-        android:textColor="?android:attr/textColorPrimaryInverse" />
+        android:autoLink="web" />
 
 </LinearLayout>
