--- a/res/layout/drawer_list_item.xml
+++ b/res/layout/drawer_list_item.xml
@@ -2,9 +2,11 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:padding="20dp"
     android:textColor="#444444"
     android:background="#efefef"
+    android:textSize="15sp"
+    android:layout_marginTop="5dp"
 >
 
 </TextView>
