--- a/res/layout/lookup.xml
+++ b/res/layout/lookup.xml
@@ -15,77 +15,81 @@
      limitations under the License.
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#050505"
-    android:orientation="vertical"
-    android:textColor="#06D5C3" >
+    android:layout_height="match_parent">
 
-    <GridView
-        android:id="@+id/gridview"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#050505"
-        android:columnWidth="90dp"
-        android:gravity="center"
-        android:horizontalSpacing="10dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:textColor="#06D5C3"
-        android:verticalSpacing="10dp"
-        android:visibility="gone" />
+    <!-- The main content view -->
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:background="#ffffff"
+	    android:orientation="vertical"
+	    android:textColor="#444444" >
+	
+	    <LinearLayout
+	        android:id="@+id/title_bar"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:gravity="center_vertical"
+	        android:orientation="horizontal"
+	        android:background="#999999" >
+	
+	        <ProgressBar
+	            android:id="@+id/progress"
+	            android:layout_width="18dip"
+	            android:layout_height="18dip"
+	            android:layout_marginLeft="10dip"
+	            android:indeterminateBehavior="repeat"
+	            android:indeterminateDrawable="@drawable/progress_spin"
+	            android:indeterminateDuration="3500"
+	            android:indeterminateOnly="true"
+	            android:paddingRight="10dip"
+	            android:textColor="#ffffff" />
+	
+	        <TextView
+	            android:id="@+id/title"
+	            style="@style/LookupTitle"
+	            android:layout_width="0dip"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"
+	            android:background="#999999"
+	            android:paddingBottom="10dip"
+	            android:paddingLeft="0dip"
+	            android:paddingRight="10dip"
+	            android:paddingTop="10dip"
+	            android:textColor="#ffffff" />
+	    </LinearLayout>
+	
+	    <TextView
+	        android:id="@+id/messageview"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:background="#ffffff"
+	        android:padding="10dip"
+	        android:textColor="#444444" />
+	
+	    <ListView
+	        android:id="@+id/listview"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:background="#ffffff"
+	        android:cacheColorHint="@android:color/transparent"
+	        android:padding="10dip"
+	        android:textColor="#444444" />
+	
+	</LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/title_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:visibility="gone" >
-
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="18dip"
-            android:layout_height="18dip"
-            android:layout_marginLeft="10dip"
-            android:background="#050505"
-            android:indeterminateBehavior="repeat"
-            android:indeterminateDrawable="@drawable/progress_spin"
-            android:indeterminateDuration="3500"
-            android:indeterminateOnly="true"
-            android:paddingRight="10dip"
-            android:textColor="#06D5C3" />
-
-        <TextView
-            android:id="@+id/title"
-            style="@style/LookupTitle"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#050505"
-            android:paddingBottom="10dip"
-            android:paddingLeft="0dip"
-            android:paddingRight="10dip"
-            android:paddingTop="10dip"
-            android:textColor="#06D5C3" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/messageview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#06D5C3"
-        android:padding="10dip"
-        android:textColor="#050505" />
-
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
+    <!-- The navigation drawer -->
+    <ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:background="#050505"
-        android:cacheColorHint="@android:color/transparent"
-        android:padding="10dip"
-        android:textColor="#06D5C3" />
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#fff"/>
 
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
