--- a/res/layout/lookup.xml
+++ b/res/layout/lookup.xml
@@ -69,7 +69,8 @@
 	        android:layout_height="wrap_content"
 	        android:background="#ffffff"
 	        android:padding="10dip"
-	        android:textColor="#444444" />
+	        android:textColor="#444444"
+	        android:autoLink="none" />
 	
 	    <ListView
 	        android:id="@+id/listview"
